{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 13,
  "lineage": "41f558fb-02b3-b7ae-08ef-dfb88be54075",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/0cfe2870-d256-4119-b0a3-16293ac11bdc/resourceGroups/1-b0da6520-playground-sandbox/providers/Microsoft.Network/networkInterfaces/NIC1",
            "internal_domain_name_suffix": "bel4koxt5uaufhnzblzpp1uo1b.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/0cfe2870-d256-4119-b0a3-16293ac11bdc/resourceGroups/1-b0da6520-playground-sandbox/providers/Microsoft.Network/virtualNetworks/Vnet1/subnets/public"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "name": "NIC1",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "1-b0da6520-playground-sandbox"
          },
          "dependencies": [
            "module.networks.azurerm_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/0cfe2870-d256-4119-b0a3-16293ac11bdc/resourceGroups/1-b0da6520-playground-sandbox/providers/Microsoft.Network/virtualNetworks/Vnet1/subnets/private",
            "name": "private",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "1-b0da6520-playground-sandbox",
            "virtual_network_name": "Vnet1"
          },
          "dependencies": [
            "module.networks.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/0cfe2870-d256-4119-b0a3-16293ac11bdc/resourceGroups/1-b0da6520-playground-sandbox/providers/Microsoft.Network/virtualNetworks/Vnet1/subnets/public",
            "name": "public",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "1-b0da6520-playground-sandbox",
            "virtual_network_name": "Vnet1"
          },
          "dependencies": [
            "module.networks.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_link",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0cfe2870-d256-4119-b0a3-16293ac11bdc/resourceGroups/1-b0da6520-playground-sandbox/providers/Microsoft.Network/virtualNetworks/Vnet1/subnets/public",
            "network_security_group_id": "/subscriptions/0cfe2870-d256-4119-b0a3-16293ac11bdc/resourceGroups/1-b0da6520-playground-sandbox/providers/Microsoft.Network/networkSecurityGroups/nsg-1",
            "subnet_id": "/subscriptions/0cfe2870-d256-4119-b0a3-16293ac11bdc/resourceGroups/1-b0da6520-playground-sandbox/providers/Microsoft.Network/virtualNetworks/Vnet1/subnets/public"
          },
          "dependencies": [
            "module.networks.azurerm_subnet.public",
            "module.networks.azurerm_virtual_network.vnet",
            "module.security.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.networks",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3ae51709-fdf3-4201-9db9-0af2f7ee8ed9",
            "id": "/subscriptions/0cfe2870-d256-4119-b0a3-16293ac11bdc/resourceGroups/1-b0da6520-playground-sandbox/providers/Microsoft.Network/virtualNetworks/Vnet1",
            "location": "eastus",
            "name": "Vnet1",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "1-b0da6520-playground-sandbox",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/0cfe2870-d256-4119-b0a3-16293ac11bdc/resourceGroups/1-b0da6520-playground-sandbox/providers/Microsoft.Network/virtualNetworks/Vnet1/subnets/public",
                "name": "public",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/0cfe2870-d256-4119-b0a3-16293ac11bdc/resourceGroups/1-b0da6520-playground-sandbox/providers/Microsoft.Network/networkSecurityGroups/nsg-1"
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/0cfe2870-d256-4119-b0a3-16293ac11bdc/resourceGroups/1-b0da6520-playground-sandbox/providers/Microsoft.Network/virtualNetworks/Vnet1/subnets/private",
                "name": "private",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/0cfe2870-d256-4119-b0a3-16293ac11bdc/resourceGroups/1-b0da6520-playground-sandbox/providers/Microsoft.Network/networkSecurityGroups/nsg-1",
            "location": "eastus",
            "name": "nsg-1",
            "resource_group_name": "1-b0da6520-playground-sandbox",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowSSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "nsg_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/0cfe2870-d256-4119-b0a3-16293ac11bdc/resourceGroups/1-b0da6520-playground-sandbox/providers/Microsoft.Network/networkSecurityGroups/nsg-1/securityRules/AllowSSH",
            "name": "AllowSSH",
            "network_security_group_name": "nsg-1",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "1-b0da6520-playground-sandbox",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.azurerm_network_security_group.nsg"
          ]
        }
      ]
    }
  ]
}